--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "node-telegram-bot-api": "^0.65.1"
+    "node-telegram-bot-api": "^0.65.1",
+    "tonweb": "^0.0.66"
   }
 }
